--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
+/.idea/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
 /src/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
 *.md @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
