Update the CODEOWNERS file (#9)
* Update the CODEOWNERS file

* Update the CODEOWNERS file again

* Add additional whitespace to relation R in subtask-1.tex

* Compile main.pdf

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-/.idea/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
-/src/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
-*.md @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO
+/.idea/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
+/src/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
+*.md @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
