--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-/.idea/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
-/src/ @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
-*.md @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
+* @Danar435 @HasnainAliprogramming @MadsHeilmann @SebastianMygind @TexWO @jmkq0056 @audio-engineer
