--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -11,12 +11,12 @@ jobs:
           working_directory: src/
           compiler: lualatex
           args: -file-line-error -interaction=nonstopmode -output-format=pdf
-      - uses: dante-ev/latex-action@latest
-        with:
-          root_file: main.aux
-          working_directory: src/
-          compiler: bibtex
-          args: ''
+      # - uses: dante-ev/latex-action@latest
+      #   with:
+      #     root_file: main.aux
+      #     working_directory: src/
+      #     compiler: bibtex
+      #     args: ''
       - uses: dante-ev/latex-action@latest
         with:
           root_file: main.tex
