--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,23 @@
     "*.c": "c",
     "*.h": "c",
     "*.cc": "cpp"
-  }
+  },
+  "latex-workshop.latex.tools": [
+    {
+      "name": "latexmk-cd",
+      "command": "latexmk",
+      "args": ["-cd", "%DOC%"]
+    }
+  ],
+  "latex-workshop.latex.recipes": [
+    { "name": "latexmk cd", "tools": ["latexmk-cd"] }
+  ],
+  "latex-workshop.linting.chktex.enabled": true,
+  "latex-workshop.formatting.latex": "latexindent",
+  "latex-workshop.formatting.latexindent.args": [
+    "-l",
+    "%WORKSPACE_FOLDER%/workshops/localSettings.yaml",
+    "-m",
+    "%TMPFILE%"
+  ]
 }
